--- a/src/pages/tr/ekibimiz.astro
+++ b/src/pages/tr/ekibimiz.astro
@@ -103,8 +103,7 @@ console.log('👥 TEAM DEBUG: Departments found:', Object.keys(orderedTeamData))
               </h2>
             </div>
             <p class="text-lg text-gray-600 max-w-3xl mx-auto" style="font-family: 'Radio Canada Big', sans-serif;">
-              30 yıllık deneyimimizle, fuarcılık sektöründe uzman kadromuzla hizmet veriyoruz. 
-              Her departmanımızda alanında uzman profesyoneller yer alıyor.
+              30 yıllık deneyimimiz ve sektöründe uzman kadromuzla hizmet veriyoruz.
             </p>
           </div>
 
