--- a/src/pages/tr/ekibimiz.astro
+++ b/src/pages/tr/ekibimiz.astro
@@ -40,7 +40,7 @@ const departmentOrder = [
   'Yönetim Kurulu',
   'Moda Fuarları',
   'Ev Tekstili ve Dekorasyon Fuarları',
-  'Yapı & İnşaat, Elektrik & Aydınlatma, Mobilya & Mobilya Yan Sanayi Fuarları',
+  'Mobilya ve Mobilya Yan Sanayi & Elektirik ve Aydınlatma Fuarları',
   'Kalıp & Plastik, İhtisas, Havuz',
   'Deri Fuarları & Güvenlik Sistemleri Fuarları',
   'Teknik Proje',
